more changes to exercises